genesys/parserBisonFlex/GenesysParser.output
Terminais sem uso na gramática

   oNOT


Estado 52 conflitos: 1 de deslocamento/redução
Estado 103 conflitos: 1 de deslocamento/redução
Estado 154 conflitos: 1 de deslocamento/redução
Estado 155 conflitos: 1 de deslocamento/redução
Estado 156 conflitos: 1 de deslocamento/redução
Estado 157 conflitos: 1 de deslocamento/redução
Estado 158 conflitos: 1 de deslocamento/redução
Estado 159 conflitos: 1 de deslocamento/redução
Estado 160 conflitos: 1 de deslocamento/redução
Estado 161 conflitos: 1 de deslocamento/redução
Estado 162 conflitos: 1 de deslocamento/redução
Estado 163 conflitos: 13 de deslocamento/redução
Estado 164 conflitos: 1 de deslocamento/redução
Estado 165 conflitos: 1 de deslocamento/redução
Estado 166 conflitos: 1 de deslocamento/redução
Estado 215 conflitos: 14 de deslocamento/redução
Estado 240 conflitos: 13 de deslocamento/redução
Estado 255 conflitos: 13 de deslocamento/redução
Estado 256 conflitos: 13 de deslocamento/redução


Gramática

    0 $accept: input "end of file"

    1 input: %empty
    2      | input '\n'
    3      | input programa
    4      | illegal
    5      | error '\n'

    6 programa: expressao

    7 expressao: numero
    8          | funcao
    9          | comando
   10          | aritmetica
   11          | relacional
   12          | "(" expressao ")"
   13          | atributo
   14          | variavel
   15          | formula

   16 numero: NUMD
   17       | NUMH

   18 aritmetica: expressao "+" expressao
   19           | expressao "-" expressao
   20           | expressao "/" expressao
   21           | expressao "*" expressao
   22           | expressao "^" expressao
   23           | "-" expressao

   24 relacional: expressao oAND expressao
   25           | expressao oOR expressao
   26           | expressao "<" expressao
   27           | expressao oLE expressao
   28           | expressao ">" expressao
   29           | expressao oGE expressao
   30           | expressao oEQ expressao
   31           | expressao oNE expressao

   32 comando: comandoIF
   33        | comandoFOR

   34 comandoIF: cIF "(" expressao ")" expressao cELSE expressao
   35          | cIF "(" expressao ")" expressao

   36 comandoFOR: cFOR variavel "=" expressao cTO expressao cDO atribuicao
   37           | cFOR atributo "=" expressao cTO expressao cDO atribuicao

   38 funcao: funcaoArit
   39       | funcaoTrig
   40       | funcaoProb
   41       | funcaoKernel
   42       | funcaoPlugin
   43       | funcaoUser

   44 funcaoKernel: fTNOW
   45             | fTFIN

   46 funcaoTrig: fSIN "(" expressao ")"
   47           | fCOS "(" expressao ")"

   48 funcaoArit: fROUND "(" expressao ")"
   49           | fFRAC "(" expressao ")"
   50           | fTRUNC "(" expressao ")"
   51           | fMOD "(" expressao "," expressao ")"

   52 funcaoProb: fEXPO "(" expressao ")"
   53           | fNORM "(" expressao "," expressao ")"
   54           | fUNIF "(" expressao "," expressao ")"
   55           | fWEIB "(" expressao "," expressao ")"
   56           | fLOGN "(" expressao "," expressao ")"
   57           | fGAMM "(" expressao "," expressao ")"
   58           | fERLA "(" expressao "," expressao ")"
   59           | fTRIA "(" expressao "," expressao "," expressao ")"
   60           | fBETA "(" expressao "," expressao "," expressao "," expressao ")"
   61           | fDISC "(" listaparm ")"

   62 funcaoUser: "USER" "(" expressao ")"

   63 listaparm: listaparm "," expressao "," expressao
   64          | expressao "," expressao

   65 illegal: ILLEGAL

   66 atributo: ATRIB

   67 atribuicao: atributo "=" expressao
   68           | variavel "=" expressao

   69 variavel: VARI
   70         | VARI "[" expressao "]"
   71         | VARI "[" expressao "," expressao "]"

   72 formula: FORM

   73 funcaoPlugin: CTEZERO
   74             | fNQ "(" QUEUE ")"
   75             | fLASTINQ "(" QUEUE ")"
   76             | fFIRSTINQ "(" QUEUE ")"
   77             | fSAQUE "(" QUEUE "," ATRIB ")"
   78             | fAQUE "(" QUEUE "," NUMD "," ATRIB ")"
   79             | fMR "(" RESOURCE ")"
   80             | fNR "(" RESOURCE ")"
   81             | fRESSEIZES "(" RESOURCE ")"
   82             | fSTATE "(" RESOURCE ")"
   83             | fIRF "(" RESOURCE ")"
   84             | fSETSUM "(" SET ")"
   85             | fNUMSET "(" SET ")"
   86             | CSTAT
   87             | fTAVG "(" CSTAT ")"


Terminais, com as regras onde eles aparecem

"end of file" (0) 0
'\n' (10) 2 5
error (256) 5
NUMD (258) 16 78
NUMH (259) 17
CTEZERO (260) 73
oLE (261) 27
oGE (262) 29
oEQ (263) 30
oNE (264) 31
oAND (265) 24
oOR (266) 25
oNOT (267)
fSIN (268) 46
fCOS (269) 47
fROUND (270) 48
fMOD (271) 51
fTRUNC (272) 50
fFRAC (273) 49
fEXPO (274) 52
fNORM (275) 53
fUNIF (276) 54
fWEIB (277) 55
fLOGN (278) 56
fGAMM (279) 57
fERLA (280) 58
fTRIA (281) 59
fBETA (282) 60
fDISC (283) 61
fTNOW (284) 44
fTFIN (285) 45
cIF (286) 34 35
cELSE (287) 34
cFOR (288) 36 37
cTO (289) 36 37
cDO (290) 36 37
ATRIB (291) 66 77 78
ILLEGAL (292) 65
RESOURCE (293) 79 80 81 82 83
fNR (294) 80
fMR (295) 79
fIRF (296) 83
fRESSEIZES (297) 81
fSTATE (298) 82
fSETSUM (299) 84
QUEUE (300) 74 75 76 77 78
fNQ (301) 74
fFIRSTINQ (302) 76
fLASTINQ (303) 75
fSAQUE (304) 77
fAQUE (305) 78
SET (306) 84 85
fNUMSET (307) 85
CSTAT (308) 86 87
fTAVG (309) 87
VARI (310) 69 70 71
FORM (311) 72
"(" (312) 12 34 35 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 74 75 76 77 78 79 80 81 82 83 84 85 87
")" (313) 12 34 35 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 74 75 76 77 78 79 80 81 82 83 84 85 87
"+" (314) 18
"-" (315) 19 23
"*" (316) 21
"^" (317) 22
"/" (318) 20
"<" (319) 26
">" (320) 28
"=" (321) 36 37 67 68
"," (322) 51 53 54 55 56 57 58 59 60 63 64 71 77 78
NEG (323)
"USER" (324) 62
"[" (325) 70 71
"]" (326) 70 71


Não terminais com as regras onde eles aparecem

$accept (73)
    à esquerda: 0
input (74)
    à esquerda: 1 2 3 4 5, à direita: 0 2 3
programa (75)
    à esquerda: 6, à direita: 3
expressao (76)
    à esquerda: 7 8 9 10 11 12 13 14 15, à direita: 6 12 18 19 20
    21 22 23 24 25 26 27 28 29 30 31 34 35 36 37 46 47 48 49 50 51
    52 53 54 55 56 57 58 59 60 62 63 64 67 68 70 71
numero (77)
    à esquerda: 16 17, à direita: 7
aritmetica (78)
    à esquerda: 18 19 20 21 22 23, à direita: 10
relacional (79)
    à esquerda: 24 25 26 27 28 29 30 31, à direita: 11
comando (80)
    à esquerda: 32 33, à direita: 9
comandoIF (81)
    à esquerda: 34 35, à direita: 32
comandoFOR (82)
    à esquerda: 36 37, à direita: 33
funcao (83)
    à esquerda: 38 39 40 41 42 43, à direita: 8
funcaoKernel (84)
    à esquerda: 44 45, à direita: 41
funcaoTrig (85)
    à esquerda: 46 47, à direita: 39
funcaoArit (86)
    à esquerda: 48 49 50 51, à direita: 38
funcaoProb (87)
    à esquerda: 52 53 54 55 56 57 58 59 60 61, à direita: 40
funcaoUser (88)
    à esquerda: 62, à direita: 43
listaparm (89)
    à esquerda: 63 64, à direita: 61 63
illegal (90)
    à esquerda: 65, à direita: 4
atributo (91)
    à esquerda: 66, à direita: 13 37 67
atribuicao (92)
    à esquerda: 67 68, à direita: 36 37
variavel (93)
    à esquerda: 69 70 71, à direita: 14 36 68
formula (94)
    à esquerda: 72, à direita: 15
funcaoPlugin (95)
    à esquerda: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87, à direita:
    42


Estado 0

    0 $accept: . input "end of file"

    error    deslocar, e ir ao estado 1
    ILLEGAL  deslocar, e ir ao estado 2

    "end of file"  reduzir usando a regra 1 (input)
    NUMD           reduzir usando a regra 1 (input)
    NUMH           reduzir usando a regra 1 (input)
    CTEZERO        reduzir usando a regra 1 (input)
    fSIN           reduzir usando a regra 1 (input)
    fCOS           reduzir usando a regra 1 (input)
    fROUND         reduzir usando a regra 1 (input)
    fMOD           reduzir usando a regra 1 (input)
    fTRUNC         reduzir usando a regra 1 (input)
    fFRAC          reduzir usando a regra 1 (input)
    fEXPO          reduzir usando a regra 1 (input)
    fNORM          reduzir usando a regra 1 (input)
    fUNIF          reduzir usando a regra 1 (input)
    fWEIB          reduzir usando a regra 1 (input)
    fLOGN          reduzir usando a regra 1 (input)
    fGAMM          reduzir usando a regra 1 (input)
    fERLA          reduzir usando a regra 1 (input)
    fTRIA          reduzir usando a regra 1 (input)
    fBETA          reduzir usando a regra 1 (input)
    fDISC          reduzir usando a regra 1 (input)
    fTNOW          reduzir usando a regra 1 (input)
    fTFIN          reduzir usando a regra 1 (input)
    cIF            reduzir usando a regra 1 (input)
    cFOR           reduzir usando a regra 1 (input)
    ATRIB          reduzir usando a regra 1 (input)
    fNR            reduzir usando a regra 1 (input)
    fMR            reduzir usando a regra 1 (input)
    fIRF           reduzir usando a regra 1 (input)
    fRESSEIZES     reduzir usando a regra 1 (input)
    fSTATE         reduzir usando a regra 1 (input)
    fSETSUM        reduzir usando a regra 1 (input)
    fNQ            reduzir usando a regra 1 (input)
    fFIRSTINQ      reduzir usando a regra 1 (input)
    fLASTINQ       reduzir usando a regra 1 (input)
    fSAQUE         reduzir usando a regra 1 (input)
    fAQUE          reduzir usando a regra 1 (input)
    fNUMSET        reduzir usando a regra 1 (input)
    CSTAT          reduzir usando a regra 1 (input)
    fTAVG          reduzir usando a regra 1 (input)
    VARI           reduzir usando a regra 1 (input)
    FORM           reduzir usando a regra 1 (input)
    "("            reduzir usando a regra 1 (input)
    "-"            reduzir usando a regra 1 (input)
    '\n'           reduzir usando a regra 1 (input)
    "USER"         reduzir usando a regra 1 (input)

    input    ir ao estado 3
    illegal  ir ao estado 4


Estado 1

    5 input: error . '\n'

    '\n'  deslocar, e ir ao estado 5


Estado 2

   65 illegal: ILLEGAL .

    $padrão  reduzir usando a regra 65 (illegal)


Estado 3

    0 $accept: input . "end of file"
    2 input: input . '\n'
    3      | input . programa

    "end of file"  deslocar, e ir ao estado 6
    NUMD           deslocar, e ir ao estado 7
    NUMH           deslocar, e ir ao estado 8
    CTEZERO        deslocar, e ir ao estado 9
    fSIN           deslocar, e ir ao estado 10
    fCOS           deslocar, e ir ao estado 11
    fROUND         deslocar, e ir ao estado 12
    fMOD           deslocar, e ir ao estado 13
    fTRUNC         deslocar, e ir ao estado 14
    fFRAC          deslocar, e ir ao estado 15
    fEXPO          deslocar, e ir ao estado 16
    fNORM          deslocar, e ir ao estado 17
    fUNIF          deslocar, e ir ao estado 18
    fWEIB          deslocar, e ir ao estado 19
    fLOGN          deslocar, e ir ao estado 20
    fGAMM          deslocar, e ir ao estado 21
    fERLA          deslocar, e ir ao estado 22
    fTRIA          deslocar, e ir ao estado 23
    fBETA          deslocar, e ir ao estado 24
    fDISC          deslocar, e ir ao estado 25
    fTNOW          deslocar, e ir ao estado 26
    fTFIN          deslocar, e ir ao estado 27
    cIF            deslocar, e ir ao estado 28
    cFOR           deslocar, e ir ao estado 29
    ATRIB          deslocar, e ir ao estado 30
    fNR            deslocar, e ir ao estado 31
    fMR            deslocar, e ir ao estado 32
    fIRF           deslocar, e ir ao estado 33
    fRESSEIZES     deslocar, e ir ao estado 34
    fSTATE         deslocar, e ir ao estado 35
    fSETSUM        deslocar, e ir ao estado 36
    fNQ            deslocar, e ir ao estado 37
    fFIRSTINQ      deslocar, e ir ao estado 38
    fLASTINQ       deslocar, e ir ao estado 39
    fSAQUE         deslocar, e ir ao estado 40
    fAQUE          deslocar, e ir ao estado 41
    fNUMSET        deslocar, e ir ao estado 42
    CSTAT          deslocar, e ir ao estado 43
    fTAVG          deslocar, e ir ao estado 44
    VARI           deslocar, e ir ao estado 45
    FORM           deslocar, e ir ao estado 46
    "("            deslocar, e ir ao estado 47
    "-"            deslocar, e ir ao estado 48
    '\n'           deslocar, e ir ao estado 49
    "USER"         deslocar, e ir ao estado 50

    programa      ir ao estado 51
    expressao     ir ao estado 52
    numero        ir ao estado 53
    aritmetica    ir ao estado 54
    relacional    ir ao estado 55
    comando       ir ao estado 56
    comandoIF     ir ao estado 57
    comandoFOR    ir ao estado 58
    funcao        ir ao estado 59
    funcaoKernel  ir ao estado 60
    funcaoTrig    ir ao estado 61
    funcaoArit    ir ao estado 62
    funcaoProb    ir ao estado 63
    funcaoUser    ir ao estado 64
    atributo      ir ao estado 65
    variavel      ir ao estado 66
    formula       ir ao estado 67
    funcaoPlugin  ir ao estado 68


Estado 4

    4 input: illegal .

    $padrão  reduzir usando a regra 4 (input)


Estado 5

    5 input: error '\n' .

    $padrão  reduzir usando a regra 5 (input)


Estado 6

    0 $accept: input "end of file" .

    $padrão  aceitar


Estado 7

   16 numero: NUMD .

    $padrão  reduzir usando a regra 16 (numero)


Estado 8

   17 numero: NUMH .

    $padrão  reduzir usando a regra 17 (numero)


Estado 9

   73 funcaoPlugin: CTEZERO .

    $padrão  reduzir usando a regra 73 (funcaoPlugin)


Estado 10

   46 funcaoTrig: fSIN . "(" expressao ")"

    "("  deslocar, e ir ao estado 69


Estado 11

   47 funcaoTrig: fCOS . "(" expressao ")"

    "("  deslocar, e ir ao estado 70


Estado 12

   48 funcaoArit: fROUND . "(" expressao ")"

    "("  deslocar, e ir ao estado 71


Estado 13

   51 funcaoArit: fMOD . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 72


Estado 14

   50 funcaoArit: fTRUNC . "(" expressao ")"

    "("  deslocar, e ir ao estado 73


Estado 15

   49 funcaoArit: fFRAC . "(" expressao ")"

    "("  deslocar, e ir ao estado 74


Estado 16

   52 funcaoProb: fEXPO . "(" expressao ")"

    "("  deslocar, e ir ao estado 75


Estado 17

   53 funcaoProb: fNORM . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 76


Estado 18

   54 funcaoProb: fUNIF . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 77


Estado 19

   55 funcaoProb: fWEIB . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 78


Estado 20

   56 funcaoProb: fLOGN . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 79


Estado 21

   57 funcaoProb: fGAMM . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 80


Estado 22

   58 funcaoProb: fERLA . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 81


Estado 23

   59 funcaoProb: fTRIA . "(" expressao "," expressao "," expressao ")"

    "("  deslocar, e ir ao estado 82


Estado 24

   60 funcaoProb: fBETA . "(" expressao "," expressao "," expressao "," expressao ")"

    "("  deslocar, e ir ao estado 83


Estado 25

   61 funcaoProb: fDISC . "(" listaparm ")"

    "("  deslocar, e ir ao estado 84


Estado 26

   44 funcaoKernel: fTNOW .

    $padrão  reduzir usando a regra 44 (funcaoKernel)


Estado 27

   45 funcaoKernel: fTFIN .

    $padrão  reduzir usando a regra 45 (funcaoKernel)


Estado 28

   34 comandoIF: cIF . "(" expressao ")" expressao cELSE expressao
   35          | cIF . "(" expressao ")" expressao

    "("  deslocar, e ir ao estado 85


Estado 29

   36 comandoFOR: cFOR . variavel "=" expressao cTO expressao cDO atribuicao
   37           | cFOR . atributo "=" expressao cTO expressao cDO atribuicao

    ATRIB  deslocar, e ir ao estado 30
    VARI   deslocar, e ir ao estado 45

    atributo  ir ao estado 86
    variavel  ir ao estado 87


Estado 30

   66 atributo: ATRIB .

    $padrão  reduzir usando a regra 66 (atributo)


Estado 31

   80 funcaoPlugin: fNR . "(" RESOURCE ")"

    "("  deslocar, e ir ao estado 88


Estado 32

   79 funcaoPlugin: fMR . "(" RESOURCE ")"

    "("  deslocar, e ir ao estado 89


Estado 33

   83 funcaoPlugin: fIRF . "(" RESOURCE ")"

    "("  deslocar, e ir ao estado 90


Estado 34

   81 funcaoPlugin: fRESSEIZES . "(" RESOURCE ")"

    "("  deslocar, e ir ao estado 91


Estado 35

   82 funcaoPlugin: fSTATE . "(" RESOURCE ")"

    "("  deslocar, e ir ao estado 92


Estado 36

   84 funcaoPlugin: fSETSUM . "(" SET ")"

    "("  deslocar, e ir ao estado 93


Estado 37

   74 funcaoPlugin: fNQ . "(" QUEUE ")"

    "("  deslocar, e ir ao estado 94


Estado 38

   76 funcaoPlugin: fFIRSTINQ . "(" QUEUE ")"

    "("  deslocar, e ir ao estado 95


Estado 39

   75 funcaoPlugin: fLASTINQ . "(" QUEUE ")"

    "("  deslocar, e ir ao estado 96


Estado 40

   77 funcaoPlugin: fSAQUE . "(" QUEUE "," ATRIB ")"

    "("  deslocar, e ir ao estado 97


Estado 41

   78 funcaoPlugin: fAQUE . "(" QUEUE "," NUMD "," ATRIB ")"

    "("  deslocar, e ir ao estado 98


Estado 42

   85 funcaoPlugin: fNUMSET . "(" SET ")"

    "("  deslocar, e ir ao estado 99


Estado 43

   86 funcaoPlugin: CSTAT .

    $padrão  reduzir usando a regra 86 (funcaoPlugin)


Estado 44

   87 funcaoPlugin: fTAVG . "(" CSTAT ")"

    "("  deslocar, e ir ao estado 100


Estado 45

   69 variavel: VARI .
   70         | VARI . "[" expressao "]"
   71         | VARI . "[" expressao "," expressao "]"

    "["  deslocar, e ir ao estado 101

    $padrão  reduzir usando a regra 69 (variavel)


Estado 46

   72 formula: FORM .

    $padrão  reduzir usando a regra 72 (formula)


Estado 47

   12 expressao: "(" . expressao ")"

    NUMD        deslocar, e ir ao estado 7
    NUMH        deslocar, e ir ao estado 8
    CTEZERO     deslocar, e ir ao estado 9
    fSIN        deslocar, e ir ao estado 10
    fCOS        deslocar, e ir ao estado 11
    fROUND      deslocar, e ir ao estado 12
    fMOD        deslocar, e ir ao estado 13
    fTRUNC      deslocar, e ir ao estado 14
    fFRAC       deslocar, e ir ao estado 15
    fEXPO       deslocar, e ir ao estado 16
    fNORM       deslocar, e ir ao estado 17
    fUNIF       deslocar, e ir ao estado 18
    fWEIB       deslocar, e ir ao estado 19
    fLOGN       deslocar, e ir ao estado 20
    fGAMM       deslocar, e ir ao estado 21
    fERLA       deslocar, e ir ao estado 22
    fTRIA       deslocar, e ir ao estado 23
    fBETA       deslocar, e ir ao estado 24
    fDISC       deslocar, e ir ao estado 25
    fTNOW       deslocar, e ir ao estado 26
    fTFIN       deslocar, e ir ao estado 27
    cIF         deslocar, e ir ao estado 28
    cFOR        deslocar, e ir ao estado 29
    ATRIB       deslocar, e ir ao estado 30
    fNR         deslocar, e ir ao estado 31
    fMR         deslocar, e ir ao estado 32
    fIRF        deslocar, e ir ao estado 33
    fRESSEIZES  deslocar, e ir ao estado 34
    fSTATE      deslocar, e ir ao estado 35
    fSETSUM     deslocar, e ir ao estado 36
    fNQ         deslocar, e ir ao estado 37
    fFIRSTINQ   deslocar, e ir ao estado 38
    fLASTINQ    deslocar, e ir ao estado 39
    fSAQUE      deslocar, e ir ao estado 40
    fAQUE       deslocar, e ir ao estado 41
    fNUMSET     deslocar, e ir ao estado 42
    CSTAT       deslocar, e ir ao estado 43
    fTAVG       deslocar, e ir ao estado 44
    VARI        deslocar, e ir ao estado 45
    FORM        deslocar, e ir ao estado 46
    "("         deslocar, e ir ao estado 47
    "-"         deslocar, e ir ao estado 48
    "USER"      deslocar, e ir ao estado 50

    expressao     ir ao estado 102
    numero        ir ao estado 53
    aritmetica    ir ao estado 54
    relacional    ir ao estado 55
    comando       ir ao estado 56
    comandoIF     ir ao estado 57
    comandoFOR    ir ao estado 58
    funcao        ir ao estado 59
    funcaoKernel  ir ao estado 60
    funcaoTrig    ir ao estado 61
    funcaoArit    ir ao estado 62
    funcaoProb    ir ao estado 63
    funcaoUser    ir ao estado 64
    atributo      ir ao estado 65
    variavel      ir ao estado 66
    formula       ir ao estado 67
    funcaoPlugin  ir ao estado 68


Estado 48

   23 aritmetica: "-" . expressao

    NUMD        deslocar, e ir ao estado 7
    NUMH        deslocar, e ir ao estado 8
    CTEZERO     deslocar, e ir ao estado 9
    fSIN        deslocar, e ir ao estado 10
    fCOS        deslocar, e ir ao estado 11
    fROUND      deslocar, e ir ao estado 12
    fMOD        deslocar, e ir ao estado 13
    fTRUNC      deslocar, e ir ao estado 14
    fFRAC       deslocar, e ir ao estado 15
    fEXPO       deslocar, e ir ao estado 16
    fNORM       deslocar, e ir ao estado 17
    fUNIF       deslocar, e ir ao estado 18
    fWEIB       deslocar, e ir ao estado 19
    fLOGN       deslocar, e ir ao estado 20
    fGAMM       deslocar, e ir ao estado 21
    fERLA       deslocar, e ir ao estado 22
    fTRIA       deslocar, e ir ao estado 23
    fBETA       deslocar, e ir ao estado 24
    fDISC       deslocar, e ir ao estado 25
    fTNOW       deslocar, e ir ao estado 26
    fTFIN       deslocar, e ir ao estado 27
    cIF         deslocar, e ir ao estado 28
    cFOR        deslocar, e ir ao estado 29
    ATRIB       deslocar, e ir ao estado 30
    fNR         deslocar, e ir ao estado 31
    fMR         deslocar, e ir ao estado 32
    fIRF        deslocar, e ir ao estado 33
    fRESSEIZES  deslocar, e ir ao estado 34
    fSTATE      deslocar, e ir ao estado 35
    fSETSUM     deslocar, e ir ao estado 36
    fNQ         deslocar, e ir ao estado 37
    fFIRSTINQ   deslocar, e ir ao estado 38
    fLASTINQ    deslocar, e ir ao estado 39
    fSAQUE      deslocar, e ir ao estado 40
    fAQUE       deslocar, e ir ao estado 41
    fNUMSET     deslocar, e ir ao estado 42
    CSTAT       deslocar, e ir ao estado 43
    fTAVG       deslocar, e ir ao estado 44
    VARI        deslocar, e ir ao estado 45
    FORM        deslocar, e ir ao estado 46
    "("         deslocar, e ir ao estado 47
    "-"         deslocar, e ir ao estado 48
    "USER"      deslocar, e ir ao estado 50

    expressao     ir ao estado 103
    numero        ir ao estado 53
    aritmetica    ir ao estado 54
    relacional    ir ao estado 55
    comando       ir ao estado 56
    comandoIF     ir ao estado 57
    comandoFOR    ir ao estado 58
    funcao        ir ao estado 59
    funcaoKernel  ir ao estado 60
    funcaoTrig    ir ao estado 61
    funcaoArit    ir ao estado 62
    funcaoProb    ir ao estado 63
    funcaoUser    ir ao estado 64
    atributo      ir ao estado 65
    variavel      ir ao estado 66
    formula       ir ao estado 67
    funcaoPlugin  ir ao estado 68


Estado 49

    2 input: input '\n' .

    $padrão  reduzir usando a regra 2 (input)


Estado 50

   62 funcaoUser: "USER" . "(" expressao ")"

    "("  deslocar, e ir ao estado 104


Estado 51

    3 input: input programa .

    $padrão  reduzir usando a regra 3 (input)


Estado 52

    6 programa: expressao .
   18 aritmetica: expressao . "+" expressao
   19           | expressao . "-" expressao
   20           | expressao . "/" expressao
   21           | expressao . "*" expressao
   22           | expressao . "^" expressao
   24 relacional: expressao . oAND expressao
   25           | expressao . oOR expressao
   26           | expressao . "<" expressao
   27           | expressao . oLE expressao
   28           | expressao . ">" expressao
   29           | expressao . oGE expressao
   30           | expressao . oEQ expressao
   31           | expressao . oNE expressao

    oLE   deslocar, e ir ao estado 105
    oGE   deslocar, e ir ao estado 106
    oEQ   deslocar, e ir ao estado 107
    oNE   deslocar, e ir ao estado 108
    oAND  deslocar, e ir ao estado 109
    oOR   deslocar, e ir ao estado 110
    "+"   deslocar, e ir ao estado 111
    "-"   deslocar, e ir ao estado 112
    "*"   deslocar, e ir ao estado 113
    "^"   deslocar, e ir ao estado 114
    "/"   deslocar, e ir ao estado 115
    "<"   deslocar, e ir ao estado 116
    ">"   deslocar, e ir ao estado 117

    "-"       [reduzir usando a regra 6 (programa)]
    $padrão  reduzir usando a regra 6 (programa)


Estado 53

    7 expressao: numero .

    $padrão  reduzir usando a regra 7 (expressao)


Estado 54

   10 expressao: aritmetica .

    $padrão  reduzir usando a regra 10 (expressao)


Estado 55

   11 expressao: relacional .

    $padrão  reduzir usando a regra 11 (expressao)


Estado 56

    9 expressao: comando .

    $padrão  reduzir usando a regra 9 (expressao)


Estado 57

   32 comando: comandoIF .

    $padrão  reduzir usando a regra 32 (comando)


Estado 58

   33 comando: comandoFOR .

    $padrão  reduzir usando a regra 33 (comando)


Estado 59

    8 expressao: funcao .

    $padrão  reduzir usando a regra 8 (expressao)


Estado 60

   41 funcao: funcaoKernel .

    $padrão  reduzir usando a regra 41 (funcao)


Estado 61

   39 funcao: funcaoTrig .

    $padrão  reduzir usando a regra 39 (funcao)


Estado 62

   38 funcao: funcaoArit .

    $padrão  reduzir usando a regra 38 (funcao)


Estado 63

   40 funcao: funcaoProb .

    $padrão  reduzir usando a regra 40 (funcao)


Estado 64

   43 funcao: funcaoUser .

    $padrão  reduzir usando a regra 43 (funcao)


Estado 65

   13 expressao: atributo .

    $padrão  reduzir usando a regra 13 (expressao)


Estado 66

   14 expressao: variavel .

    $padrão  reduzir usando a regra 14 (expressao)


Estado 67

   15 expressao: formula .

    $padrão  reduzir usando a regra 15 (expressao)


Estado 68

   42 funcao: funcaoPlugin .

    $padrão  reduzir usando a regra 42 (funcao)


Estado 69

   46 funcaoTrig: fSIN "(" . expressao ")"

    NUMD        deslocar, e ir ao estado 7
    NUMH        deslocar, e ir ao estado 8
    CTEZERO     deslocar, e ir ao estado 9
    fSIN        deslocar, e ir ao estado 10
    fCOS        deslocar, e ir ao estado 11
    fROUND      deslocar, e ir ao estado 12
    fMOD        deslocar, e ir ao estado 13
    fTRUNC      deslocar, e ir ao estado 14
    fFRAC       deslocar, e ir ao estado 15
    fEXPO       deslocar, e ir ao estado 16
    fNORM       deslocar, e ir ao estado 17
    fUNIF       deslocar, e ir ao estado 18
    fWEIB       deslocar, e ir ao estado 19
    fLOGN       deslocar, e ir ao estado 20
    fGAMM       deslocar, e ir ao estado 21
    fERLA       deslocar, e ir ao estado 22
    fTRIA       deslocar, e ir ao estado 23
    fBETA       deslocar, e ir ao estado 24
    fDISC       deslocar, e ir ao estado 25
    fTNOW       deslocar, e ir ao estado 26
    fTFIN       deslocar, e ir ao estado 27
    cIF         deslocar, e ir ao estado 28
    cFOR        deslocar, e ir ao estado 29
    ATRIB       deslocar, e ir ao estado 30
    fNR         deslocar, e ir ao estado 31
    fMR         deslocar, e ir ao estado 32
    fIRF        deslocar, e ir ao estado 33
    fRESSEIZES  deslocar, e ir ao estado 34
    fSTATE      deslocar, e ir ao estado 35
    fSETSUM     deslocar, e ir ao estado 36
    fNQ         deslocar, e ir ao estado 37
    fFIRSTINQ   deslocar, e ir ao estado 38
    fLASTINQ    deslocar, e ir ao estado 39
    fSAQUE      deslocar, e ir ao estado 40
    fAQUE       deslocar, e ir ao estado 41
    fNUMSET     deslocar, e ir ao estado 42
    CSTAT       deslocar, e ir ao estado 43
    fTAVG       deslocar, e ir ao estado 44
    VARI        deslocar, e ir ao estado 45
    FORM        deslocar, e ir ao estado 46
    "("         deslocar, e ir ao estado 47
    "-"         deslocar, e ir ao estado 48
    "USER"      deslocar, e ir ao estado 50

    expressao     ir ao estado 118
    numero        ir ao estado 53
    aritmetica    ir ao estado 54
    relacional    ir ao estado 55
    comando       ir ao estado 56
    comandoIF     ir ao estado 57
    comandoFOR    ir ao estado 58
    funcao        ir ao estado 59
    funcaoKernel  ir ao estado 60
    funcaoTrig    ir ao estado 61
    funcaoArit    ir ao estado 62
    funcaoProb    ir ao estado 63
    funcaoUser    ir ao estado 64
    atributo      ir ao estado 65
    variavel      ir ao estado 66
    formula       ir ao estado 67
    funcaoPlugin  ir ao estado 68


Estado 70

   47 funcaoTrig: fCOS "(" . expressao ")"

    NUMD        deslocar, e ir ao estado 7
    NUMH        deslocar, e ir ao estado 8
    CTEZERO     deslocar, e ir ao estado 9
    fSIN        deslocar, e ir ao estado 10
    fCOS        deslocar, e ir ao estado 11
    fROUND      deslocar, e ir ao estado 12
    fMOD        deslocar, e ir ao estado 13
    fTRUNC      deslocar, e ir ao estado 14
    fFRAC       deslocar, e ir ao estado 15
    fEXPO       deslocar, e ir ao estado 16
    fNORM       deslocar, e ir ao estado 17
    fUNIF       deslocar, e ir ao estado 18
    fWEIB       deslocar, e ir ao estado 19
    fLOGN       deslocar, e ir ao estado 20
    fGAMM       deslocar, e ir ao estado 21
    fERLA       deslocar, e ir ao estado 22
    fTRIA       deslocar, e ir ao estado 23
    fBETA       deslocar, e ir ao estado 24
    fDISC       deslocar, e ir ao estado 25
    fTNOW       deslocar, e ir ao estado 26
    fTFIN       deslocar, e ir ao estado 27
    cIF         deslocar, e ir ao estado 28
    cFOR        deslocar, e ir ao estado 29
    ATRIB       deslocar, e ir ao estado 30
    fNR         deslocar, e ir ao estado 31
    fMR         deslocar, e ir ao estado 32
    fIRF        deslocar, e ir ao estado 33
    fRESSEIZES  deslocar, e ir ao estado 34
    fSTATE      deslocar, e ir ao estado 35
    fSETSUM     deslocar, e ir ao estado 36
    fNQ         deslocar, e ir ao estado 37
    fFIRSTINQ   deslocar, e ir ao estado 38
    fLASTINQ    deslocar, e ir ao estado 39
    fSAQUE      deslocar, e ir ao estado 40
    fAQUE       deslocar, e ir ao estado 41
    fNUMSET     deslocar, e ir ao estado 42
    CSTAT       deslocar, e ir ao estado 43
    fTAVG       deslocar, e ir ao estado 44
    VARI        deslocar, e ir ao estado 45
    FORM        deslocar, e ir ao estado 46
    "("         deslocar, e ir ao estado 47
    "-"         deslocar, e ir ao estado 48
    "USER"      deslocar, e ir ao estado 50
